--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -741,7 +741,13 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CONFIG_SCHEDUTIL_USE_TL is not set
-# CONFIG_CPU_INPUT_BOOST is not set
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_DURATION_MS=58
+CONFIG_WAKE_BOOST_DURATION_MS=1000
+CONFIG_INPUT_BOOST_FREQ_LP=1866000
+CONFIG_INPUT_BOOST_FREQ_PERF=1923000
+CONFIG_MAX_BOOST_FREQ_LP=2000000
+CONFIG_MAX_BOOST_FREQ_PERF=2050000
 
 #
 # CPU frequency scaling drivers
