RM6785 : Drop OPLUS_SECURITY FEATURE Treewide

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -57,9 +57,9 @@ obj-y += irq/
 obj-y += rcu/
 obj-y += livepatch/
 
-#ifdef CONFIG_OPLUS_SECURE_GUARD
-obj-$(CONFIG_OPLUS_SECURE_GUARD) += keventupload/
-#endif /* CONFIG_OPLUS_SECURE_GUARD */
+#CONFIG_OPLUS_SECURE_GUARD
+obj-y += keventupload/
+
 
 obj-$(CONFIG_CHECKPOINT_RESTORE) += kcmp.o
 obj-$(CONFIG_FREEZER) += freezer.o
