--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.327 Kernel Configuration
+# Linux/arm64 4.14.329 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -609,6 +609,7 @@ CONFIG_OPPO_MEM_MONITOR=y
 CONFIG_PHYSICAL_ANTI_FRAGMENTATION=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
+# CONFIG_LRU_GEN_STATS is not set
 CONFIG_SECCOMP=y
 # CONFIG_PARAVIRT is not set
 # CONFIG_PARAVIRT_TIME_ACCOUNTING is not set
@@ -833,10 +834,10 @@ CONFIG_TCP_CONG_BBR=y
 # CONFIG_DEFAULT_BIC is not set
 # CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_HTCP is not set
-# CONFIG_DEFAULT_WESTWOOD is not set
-CONFIG_DEFAULT_BBR=y
+CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_BBR is not set
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="bbr"
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -1988,6 +1989,7 @@ CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
 # CONFIG_MTK_GPU_SPM_DVFS_SUPPORT is not set
 # CONFIG_MTK_GPU_SWPM_SUPPORT is not set
 CONFIG_MTK_VIBRATOR=y
+CONFIG_THUNDERQUAKE_ENGINE_GPL=y
 CONFIG_MTK_DFD_INTERNAL_DUMP=y
 
 #
@@ -2005,7 +2007,6 @@ CONFIG_MTK_DFD_INTERNAL_DUMP=y
 #
 # MTK runqueue statistic calculation
 #
-CONFIG_THUNDERQUAKE_ENGINE_GPL=y
 CONFIG_MTK_SELINUX_AEE_WARNING=y
 CONFIG_MTK_SYNC=y
 # CONFIG_MTK_VIDEOCODEC_DRIVER is not set
