--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -1903,8 +1903,8 @@ CONFIG_MTK_AUDIODSP_SUPPORT=y
 # CONFIG_MTK_MUSB_PORT0_LOWPOWER_MODE is not set
 CONFIG_MTK_RAM_CONSOLE=y
 # CONFIG_MTK_AEE_FEATURE is not set
-CONFIG_MTK_AEE_AED=y
-CONFIG_MTK_AEE_IPANIC=y
+# CONFIG_MTK_AEE_AED
+# CONFIG_MTK_AEE_IPANIC
 # CONFIG_MTK_AEE_MRDUMP is not set
 # CONFIG_USBIF_COMPLIANCE is not set
 # CONFIG_USB_MU3D_PIO_ONLY is not set
