Revert "defconfig: enable MTK_IO_BOOST"
This reverts commit 0a49bedd84549e2a6ac3ea97649571c3a494f8b6.

Signed-off-by: anupamroy777 <github.769@gmail.com>

--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -1444,7 +1444,7 @@ CONFIG_MTK_GPT_SCHEME_SUPPORT=y
 # Storage Block Tag
 #
 # CONFIG_MTK_BLOCK_TAG is not set
-CONFIG_MTK_IO_BOOST=y
+# CONFIG_MTK_IO_BOOST is not set
 CONFIG_MTK_PID_MAP=y
 
 #
