ARM64/dts: Mtk: Add missing address-cells & size-cells fixes: on oppo6785_20682 19661 20684 arch/arm64/boot/dts/mediatek/oppo6785_20682.dtbo: Warning (reg_format): reg property in /fragment@2/__overlay__/novatek@0 has invalid length (4 bytes) (#address-cells == 2, #size-cells == 1) arch/arm64/boot/dts/mediatek/oppo6785_20682.dtbo: Warning (reg_format): reg property in /fragment@3/__overlay__/mtk-usb@60 has invalid length (4 bytes) (#address-cells == 2, #size-cells == 1) arch/arm64/boot/dts/mediatek/oppo6785_20682.dtbo: Warning (reg_format): reg property in /fragment@14/__overlay__/aw87339@58 has invalid length (4 bytes) (#address-cells == 2, #size-cells == 1) arch/arm64/boot/dts/mediatek/oppo6785_20682.dtbo: Warning (reg_format): reg property in /fragment@14/__overlay__/aw87359@59 has invalid length (4 bytes) (#address-cells == 2, #size-cells == 1) arch/arm64/boot/dts/mediatek/oppo6785_20682.dtbo: Warning (reg_format): reg property in /fragment@15/__overlay__/nfc_nxp@28 has invalid length (4 bytes) (#address-cells == 2, #size-cells == 1) arch/arm64/boot/dts/mediatek/oppo6785_20682.dtbo: Warning (reg_format): reg property in /fragment@38/__overlay__/bq27541-battery@55 has invalid length (8 bytes) (#address-cells == 2, #size-cells == 1) arch/arm64/boot/dts/mediatek/oppo6785_20682.dtbo: Warning (reg_format): reg property in /fragment@38/__overlay__/da9313-divider@68 has invalid length (8 bytes) (#address-cells == 2, #size-cells == 1) arch/arm64/boot/dts/mediatek/oppo6785_20682.dtbo: Warning (reg_format): reg property in /fragment@38/__overlay__/mp2650-charger@5c has invalid length (8 bytes) (#address-cells == 2, #size-cells == 1) arch/arm64/boot/dts/mediatek/oppo6785_20682.dtbo: Warning (reg_format): reg property in /fragment@38/__overlay__/stm8s_fastcg@26 has invalid length (8 bytes) (#address-cells == 2, #size-cells == 1) arch/arm64/boot/dts/mediatek/oppo6785_19661.dtbo: Warning (reg_format): reg property in /fragment@2/__overlay__/novatek@0 has invalid length (4 byt

--- a/arch/arm64/boot/dts/mediatek/oppo6785/20682/oppo6785_20682_charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/oppo6785/20682/oppo6785_20682_charger.dtsi
@@ -208,6 +208,8 @@
 };
 
 &i2c7 {
+	#address-cells = <1>;
+	#size-cells = <0>;
 	status = "okay";
 	clock-frequency = <100000>;
 	bq27541-battery@55 {
