--- a/arch/arm64/configs/RM6785_defconfig
+++ b/arch/arm64/configs/RM6785_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.329 Kernel Configuration
+# Linux/arm64 4.14.335 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -711,10 +711,10 @@ CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 # CONFIG_CPU_IDLE_GOV_LADDER is not set
 # CONFIG_CPU_IDLE_GOV_MENU is not set
+CONFIG_CPU_IDLE_GOV_TEO=y
 # CONFIG_CPU_IDLE_GOV_MTK is not set
 CONFIG_CPU_IDLE_GOV_MTK_MENU=y
 # CONFIG_CPU_IDLE_NO_MTK is not set
-CONFIG_CPU_IDLE_GOV_TEO=y
 
 #
 # ARM CPU Idle Drivers
@@ -1876,18 +1876,11 @@ CONFIG_MTK_SCHED_INTEROP=y
 # MTK Heterogenous MultiProcessor Scheduler
 #
 # CONFIG_SCHED_HMP is not set
-# CONFIG_SCHED_HMP_PRIO_FILTER is not set
-# CONFIG_SCHED_HMP_PRIO_FILTER_VAL is not set
 # CONFIG_HMP_FREQUENCY_INVARIANT_SCALE is not set
-# CONFIG_SCHED_HMP_PLUS is not set
-# CONFIG_MTK_SCHED_BOOST is not set
 
 #
 # MTK runqueue statistic calculation
 #
-# CONFIG_MTK_SCHED_RQAVG_KS is not set
-# CONFIG_MTK_SCHED_RQAVG_US is not set
-# CONFIG_MTK_SCHED_CPULOAD is not set
 # CONFIG_MTK_SCHED_SYSHINT is not set
 # CONFIG_MTK_RT_THROTTLE_MON is not set
 CONFIG_MTK_AUDIO_IPI=y
@@ -1904,8 +1897,8 @@ CONFIG_MTK_AUDIODSP_SUPPORT=y
 # CONFIG_MTK_MUSB_PORT0_LOWPOWER_MODE is not set
 CONFIG_MTK_RAM_CONSOLE=y
 # CONFIG_MTK_AEE_FEATURE is not set
-# CONFIG_MTK_AEE_AED
-# CONFIG_MTK_AEE_IPANIC
+# CONFIG_MTK_AEE_AED is not set
+# CONFIG_MTK_AEE_IPANIC is not set
 # CONFIG_MTK_AEE_MRDUMP is not set
 # CONFIG_USBIF_COMPLIANCE is not set
 # CONFIG_USB_MU3D_PIO_ONLY is not set
@@ -4964,6 +4957,7 @@ CONFIG_PANIC_ON_OOPS_VALUE=1
 CONFIG_PANIC_TIMEOUT=1
 CONFIG_SCHED_DEBUG=y
 # CONFIG_SCHED_INFO is not set
+# CONFIG_SCHEDSTATS is not set
 # CONFIG_SCHED_STACK_END_CHECK is not set
 # CONFIG_DEBUG_TIMEKEEPING is not set
 
@@ -4974,7 +4968,6 @@ CONFIG_SCHED_DEBUG=y
 CONFIG_STACKTRACE=y
 # CONFIG_WARN_ALL_UNSEEDED_RANDOM is not set
 CONFIG_HAVE_DEBUG_BUGVERBOSE=y
-CONFIG_DEBUG_BUGVERBOSE=y
 CONFIG_DEBUG_LIST=y
 
 #
